# SecRAG

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  TODO.md  pyproject.toml  start.sh
.github/workflows/: ci.yml
artifacts/evaluation/0f8ca5792497992c5355139ed70de30d26c67b18/: retrieval.json
data/raw/demo_knowledge_base/announcements/: local-word.docx  sample-financial.csv.meta.json
data/raw/real_securities_data/: metadata.json
data/raw/real_securities_data/announcements/: 000001_2025.pdf.meta.json  300750_2025.pdf.meta.json
data/raw/real_securities_data/financials/: baostock_600519_valuation_202501.csv  baostock_stock_basic.csv  (+6 more)
docs/: ARCHITECTURE.md  INTERVIEW_QA.md  PROJECT_MASTERY_GUIDE.md  basedpyright-config.md  design
scripts/: check_permissions.py  clear_databases.py  demo.py  evaluate_answers.py  evaluate_compliance.py  evaluate_conversations.py  evaluate_retrieval.py  evaluate_retrieval.sample.json  evaluation_common.py  fetch_real_securities_data.py  ingest.py  inspect_chunks.py  load_financial_data.py  load_test.py  preview_chunks.py
src/: config.py
src/agents/: __init__.py  graph.py  nodes.py  state.py  tools.py
src/api/: __init__.py  auth.py  ingestion.py  main.py  ui.html  ui.py
src/data/announcements/: local-word.docx  metadata.json  sample-financial.csv
src/data/samples/: metadata.json
src/ingestion/: __init__.py  catalog.py  chunk_view.py  chunkers.py  embedder.py  financial_store.py  identity.py  loaders.py  pipeline.py  registry.py  service.py
src/rag/: chain.py  formatter.py  prompts.py
src/retrieval/: __init__.py  base.py  faq_retriever.py  filters.py  hybrid_retriever.py  product_retriever.py  regulation_retriever.py  report_retriever.py  vector_retriever.py
src/schemas/: constants.py  models.py  request_response.py  typed_dicts.py
src/tools/: __init__.py  calculator.py  financial_ratios.py  market_data.py  rerank.py  sql_query.py  suitability.py
src/utils/: audit.py  compliance.py  conversation.py  tracing.py  verifier.py
tests/: test_agents.py  test_api_auth.py  test_api_main.py  test_chain.py  test_chunk_view_scripts.py  test_chunkers.py  test_clear_databases.py  test_compliance.py  test_config.py  test_conversation.py  test_demo.py  test_embedder.py  test_evaluate_retrieval.py  test_evaluation_scripts.py  test_hybrid_retriever.py  test_ingest_metadata.py  test_ingestion_api.py  test_ingestion_catalog.py  test_ingestion_service.py  test_ingestion_ui.py  test_loader.py  test_retriever.py  test_tools.py
(+13 files in other folders)
