[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "secrag"
version = "0.1.0"
description = "机构内部投研知识平台 — Agentic RAG"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.3,<2",
    "langchain-text-splitters>=1,<2",
    "langchain-huggingface>=1,<2",
    "langchain-chroma>=1,<2",
    "langchain-ollama>=1,<2",
    "langgraph>=1,<2",
    "chromadb>=1.5,<2",
    "sentence-transformers>=5,<6",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "pandas>=2,<3",
    "langchain-unstructured>=1.0.1",
    "unstructured[docx,pdf]>=0.23.1",
    "fastapi>=0.100,<1",
    "langchain-openai>=1.3.3",
    "uvicorn>=0.30,<1",
    "httpx>=0.27,<1",
    "sqlglot>=30.12.0",
    "openpyxl>=3.1.5",
    "xlrd>=2.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9,<10",
    "pytest-asyncio>=1,<2",
    "ruff>=0.15,<1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [".venv"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.basedpyright]
# venvPath + venv 拼接得到 ./.venv，basedpyright 从此目录解析第三方包
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
